# simple-engine

./: CMakeLists.txt  README.md
include/: Bitboard.hpp  Board.hpp
src/: Bitboard.cpp  Board.cpp  main.cpp
